<resources>
    <string name="app_name">3dyoms</string>
    <string name="generic_alarm">Alarm</string>




    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>

    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">
        This device doesn\'t support Camera2 API.</string>




    <string name="sub_title_object_detection">Point your camera to the object above to cancel the alarm</string>
    <string name="sub_title_tap_activity">Tap your finger on screen enough times to cancel the alarm.</string>

    <string name="cancel">Cancel</string>
    <string name="next_test">Next Test</string>
    <string name="next_object">Another Object</string>

    <string name="delete">Delete</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="lap">Lap</string>
    <string name="generic_colon">:</string>
    <string name="generic_dot">.</string>

    <string name="add_alarm">add alarm</string>
    <string name="new_alarm">New Alarm</string>
    <string name="add_city">add city</string>
    <string name="search_city_name">Search a city…</string>

    <string name="all">Select all</string>

    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_mo_settings">Settings</string>

    <string name="empty_alarms_hint">You currently have no alarms. Press Add Alarm to make a new alarm.</string>
    <string name="empty_world_clock_hint">You currently have no cities added. Press Add City to add a new time zone.</string>

    <string name="error_already_added">You have already added this item.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>



    <!--changing the theme-->
    <string name="theme_version">theme_version_pref</string>
    <string name="theme_version_title">Theme</string>
    <string name="theme_version_summary">Change the theme of this app by choosing between dark,
        light, or follow the system options</string>
    <string-array name="theme_version_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Follow system</item>
    </string-array>
    <string-array name="theme_version_values">
        <item>0</item>
        <item>1</item>
        <item>-1</item>
    </string-array>

    <string name="volume_button">volume_button_pref</string>
    <string name="volume_button_title">Volume Buttons</string>
    <string name="volume_button_summary">What the volume buttons do while the alarm is ringing.
    </string>




    <string-array name="volume_buttons_entries">
        <item>No Action</item>
        <item>Snooze Alarm</item>
        <item>Control Volume</item>
    </string-array>

    <string-array name="volume_buttons_values">
        <item>-3</item>
        <item>1</item>
        <item>2</item>
    </string-array>



    <string name="snooze_general">snooze_general_pref</string>
    <string name="snooze_general_title">Snooze General</string>
    <string name="snooze_general_summary">Turn on/off snooze setting for the alarms that you create.
        Please note that you could still specify if you need snooze for an specific alarm or not</string>


    <string name="vibration_general">vibration_general_pref</string>
    <string name="vibration_general_title">Vibration General</string>
    <string name="vibration_general_summary">Turn on/off vibration setting for the alarms that you create.
        Please note that you could still specify if you need vibration for an specific alarm or not</string>

    <string name="music_general">music_general_pref</string>
    <string name="music_general_title">Music General</string>
    <string name="music_general_summary">Turn on/off music setting for the alarms that you create.
        Please note that you could still specify if you need music for an specific alarm or not</string>


    <string name="alarm_music">alarm_music_pref</string>
    <string name="alarm_music_title">Alarm Music</string>
    <string name="alarm_music_summary">Change the alarm sound that plays in the background when your alarm starts ringing</string>

    <string name="alarm_music_clear">alarm_music_clear_pref</string>
    <string name="alarm_music_clear_title">Reset alarm music</string>
    <string name="alarm_music_clear_summary">Reset the alarm music to the device original music</string>
    <string name="alarm_music_clear_toast">Alarm music was successfully reset!</string>

    <string name="timer_music">timer_music_pref</string>
    <string name="timer_music_title">Timer Sound</string>
    <string name="timer_music_summary">Change the timer sound that plays in the background when your timer starts ringing</string>


    <string name="timer_music_clear">timer_music_clear_pref</string>
    <string name="timer_music_clear_title">Reset timer music</string>
    <string name="timer_music_clear_summary">Reset the timer music to the device original music</string>
    <string name="timer_music_clear_toast">Timer music was successfully reset!</string>



    <string name="reset_settings">reset_settings_pref</string>
    <string name="reset_settings_title">Reset settings</string>
    <string name="reset_settings_summary">Resets the entire setting back to original</string>




    <!--snooze settings-->
    <string name="snooze_time">snooze_time_pref</string>
    <string name="snooze_time_title">Snooze Time</string>
    <string name="snooze_time_summary">How much to snooze the alarm for</string>
    <string-array name="snooze_time_entries">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="snooze_time_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>


    <string name="snooze_repeat">snooze_repeat_pref</string>
    <string name="snooze_repeat_title">Snooze Repeat</string>
    <string name="snooze_repeat_summary">How many times you can snooze an alarm before we disable snoozing</string>
    <string-array name="snooze_repeat_entries">
        <item>Once</item>
        <item>3 times</item>
        <item>5 times</item>
        <item>Infinite</item>
    </string-array>
    <string-array name="snooze_repeat_values">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>-1</item>
    </string-array>


    <!-- World Clock Constants -->
    <string name="worldClockAdd_title">Add city</string>
    <string name="worldClockAdd_subtitle">Search for a city</string>
    <string name="worldClockAdd_success_message">%s was added to your world clocks!</string>
    <string name="worldClockAdd_alreadyHaveIt">You have already added %s as a world clock</string>
    <string name="worldClock_localTime">Local Time</string>


    <!-- Alarm Clock Constants -->

</resources>
