<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="General">

        <ListPreference
            app:entries="@array/theme_version_entries"
            app:entryValues="@array/theme_version_values"
            app:iconSpaceReserved="false"
            app:key="@string/theme_version"
            app:summary="@string/theme_version_summary"
            app:title="@string/theme_version_title" />

        <ListPreference
            android:key="@string/volume_button"
            android:title="@string/volume_button_title"
            app:entries="@array/volume_buttons_entries"
            app:entryValues="@array/volume_buttons_values"
            app:iconSpaceReserved="false"
            app:summary="@string/volume_button_summary" />



        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/reset_settings"
            app:summary="@string/reset_settings_summary"
            app:title="@string/reset_settings_title" />

    </PreferenceCategory>


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Alarm">


        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/snooze_general"
            app:summary="@string/snooze_general_summary"
            app:title="@string/snooze_general_title" />

        <ListPreference
            android:defaultValue="5 minutes"
            app:entries="@array/snooze_time_entries"
            app:entryValues="@array/snooze_time_values"
            app:iconSpaceReserved="false"
            app:key="@string/snooze_time"
            app:summary="@string/snooze_time_summary"
            app:title="@string/snooze_time_title" />

        <ListPreference
            android:defaultValue="3 times"
            app:entries="@array/snooze_repeat_entries"
            app:entryValues="@array/snooze_repeat_values"
            app:iconSpaceReserved="false"
            app:key="@string/snooze_repeat"
            app:summary="@string/snooze_repeat_summary"
            app:title="@string/snooze_repeat_title" />

        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/vibration_general"
            app:summary="@string/vibration_general_summary"
            app:title="@string/vibration_general_title" />

        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/music_general"
            app:summary="@string/music_general_summary"
            app:title="@string/music_general_title" />


        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/alarm_music"
            app:summary="@string/alarm_music_summary"
            app:title="@string/alarm_music_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/alarm_music_clear"
            app:summary="@string/alarm_music_clear_summary"
            app:title="@string/alarm_music_clear_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Timer">

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/timer_music"
            app:summary="@string/timer_music_summary"
            app:title="@string/timer_music_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/timer_music_clear"
            app:summary="@string/timer_music_clear_summary"
            app:title="@string/timer_music_clear_title" />

    </PreferenceCategory>

</PreferenceScreen>
